@@ -1,8 +1,9 @@
 2007-08-26  Badlop  <badlop@ono.com>
 
-	* README.txt: Document 'jid' and 'hash' type of URIs.
+	* src/mod_webpresence.erl: Improved table format and conversion from old mod_presence.
 
 	* src/mod_webpresence.erl: Renamed mod_presence.erl to mod_webpresence.erl. Updated table format. XForm support for Hash and JID URLs. Added complete support for 'jid' and 'hash' URIs.
+	* README.txt: Document 'jid' and 'hash' type of URIs.
 
 	* Emakefile: Idem.
 	* README.txt: Idem.
